force-app/main/default/objects/Keyword_Color_Map__mdt/Keyword_Color_Map__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains the  keywords and thier respective colors</description>
    <label>Keyword-Color Map</label>
    <pluralLabel>Keyword-Color Map</pluralLabel>
</CustomObject>