force-app/main/default/objects/Keyword_Color_Map__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Tick, if this is an active record and to be considered</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>