force-app/main/default/objects/Keyword_Color_Map__mdt/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
                <default>true</default>
                <label>-</label>
            </value>
            <value>
                <fullName>custom7</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>custom19</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>custom23</fullName>
                <label>Lavender</label>
            </value>
            <value>
                <fullName>custom34</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>custom55</fullName>
                <label>Pink</label>
            </value>
            <value>
                <fullName>custom35</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>custom16</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>custom43</fullName>
                <label>Lavender Blue Shadow</label>
            </value>
            <value>
                <fullName>custom38</fullName>
                <label>Blue Martini</label>
            </value>
            <value>
                <fullName>custom26</fullName>
                <label>Guilliman Blue</label>
            </value>
            <value>
                <fullName>custom61</fullName>
                <label>Georgia Peach</label>
            </value>
            <value>
                <fullName>custom57</fullName>
                <label>Blue Bay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>