force-app/main/default/objects/Keyword_Color_Map__mdt/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>This field captures the date and time when the record is initially created.</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>