force-app/main/default/objects/Keyword_Color_Map__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>This field is a replacement fo the keyword__C field as we need to store all the keywords in a single record with a separator( &apos; , &apos;    &apos; | &apos; )</description>
    <inlineHelpText>Please enter your keywords, separated by a vertical bar (|). For example: keyword1 | keyword2 | keyword3</inlineHelpText>
    <label>Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>