force-app/main/default/objects/Keyword_Color_Map__mdt/validationRules/ExcludeInclude_Color.validationRule-meta.xml
<ValidationRule>
    <fullName>ExcludeInclude_Color</fullName>
    <active>true</active>
    <description>When Exclude then Color is optional</description>
    <errorConditionFormula>IF(
  ISPICKVAL(Type__c, &apos;Exclude&apos;), 
  IF(ISPICKVAL(Color__c, &apos;-&apos;), false, true), 
  IF(
    ISPICKVAL(Type__c, &apos;Include&apos;), 
    IF(ISPICKVAL(Color__c, &apos;-&apos;), true, false), 
    false
  )
)</errorConditionFormula>
    <errorDisplayField>Color__c</errorDisplayField>
    <errorMessage>Please input Valid Data.</errorMessage>
</ValidationRule>