force-app/main/default/objects/Keyword_Color_Map__mdt/validationRules/KeywordsCannotBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>KeywordsCannotBeBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Keywords__c)</errorConditionFormula>
    <errorDisplayField>Keywords__c</errorDisplayField>
    <errorMessage>Keywords cannot be blank</errorMessage>
</ValidationRule>