force-app/main/default/objects/Keyword_Color_Map__mdt/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Color__c</columns>
    <columns>Keywords__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>all fields</label>
</ListView>